refactor: melhorias gerais e adição de testes
- Adição do GlobalExceptionHandler
- Correções em entidades e controllers
- Novos testes: ItemChecklistControllerTest, PUTtest e VeiculoControllerTest